# src/api/types.ts
@@ -13,6 +13,7 @@ export type CoupleState = S['CoupleState'];
 export type CouplePatch = S['CouplePatch'];
 export type JoinRequest = S['JoinRequest'];
 export type Drink = S['Drink'];
+export type DrinkPhoto = S['DrinkPhoto'];
 export type DrinkCreate = S['DrinkCreate'];
 export type DrinkPage = S['DrinkPage'];
 export type Rating = S['Rating'];
